# RigelEngine

./: .appveyor.yml  .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  BUILDING.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.md  index.md
benchmark/: CMakeLists.txt  bench_string_utils.cpp
modding_tools/: CMakeLists.txt  user_profile_tool.cpp
src/: CMakeLists.txt  README.md  anti_piracy_screen_mode.cpp  anti_piracy_screen_mode.hpp  emscripten_main.cpp  game.cpp  game.hpp  game_main.cpp  game_main.hpp  game_main.ipp  game_mode.cpp  game_mode.hpp  game_options.hpp  game_runner.cpp  game_runner.hpp  game_service_provider.hpp  game_session_mode.cpp  game_session_mode.hpp  global_level_events.hpp  ingame_mode.cpp  ingame_mode.hpp  intro_demo_loop_mode.cpp  intro_demo_loop_mode.hpp  main.cpp  menu_mode.cpp  menu_mode.hpp  mode_stage.hpp  platform.cpp  platform.hpp  user_profile.cpp  user_profile.hpp  version_info.hpp.in
src/assets/: actor_image_package.cpp  actor_image_package.hpp  audio_package.cpp  audio_package.hpp  bitwise_iter.hpp  byte_buffer.hpp  cmp_file_package.cpp  cmp_file_package.hpp  duke_script_loader.cpp  duke_script_loader.hpp  ega_image_decoder.cpp  ega_image_decoder.hpp  file_utils.cpp  file_utils.hpp  level_loader.cpp  level_loader.hpp  movie_loader.cpp  movie_loader.hpp  music_loader.cpp  music_loader.hpp  palette.cpp  palette.hpp  png_image.cpp  png_image.hpp  resource_loader.cpp  resource_loader.hpp  rle_compression.hpp  ultrawide_hud_image.ipp  user_profile_import.cpp  user_profile_import.hpp  voc_decoder.cpp  voc_decoder.hpp  wide_hud_image.ipp
src/audio/: adlib_emulator.hpp  imf_player.cpp  imf_player.hpp  software_imf_player.cpp  software_imf_player.hpp  sound_system.cpp  sound_system.hpp
src/base/: array_view.cpp  array_view.hpp  audio_buffer.hpp  boost_variant.hpp  clock.hpp  color.hpp  container_utils.hpp  defer.hpp  grid.hpp  image.cpp  image.hpp  match.hpp  math_tools.hpp  spatial_types.hpp  spatial_types_printing.hpp  static_vector.hpp  string_utils.cpp  string_utils.hpp  warnings.hpp
src/common/: command_line_options.hpp  game_mode.hpp  game_service_provider.hpp  global.hpp  global_level_events.hpp  json_utils.cpp  json_utils.hpp  user_profile.cpp  user_profile.hpp
src/data/: actor_ids.hpp  audio_buffer.hpp  bonus.hpp  duke_script.hpp  game_options.cpp  game_options.hpp  game_session_data.hpp  game_traits.cpp  game_traits.hpp  high_score_list.cpp  high_score_list.hpp  image.cpp  image.hpp  level_hints.cpp  level_hints.hpp  map.cpp  map.hpp  mod_library.cpp  mod_library.hpp  movie.hpp  palette.hpp  player_data.cpp  player_data.hpp  player_model.cpp  player_model.hpp  saved_game.hpp  song.hpp  sound_ids.hpp  strings.hpp  tile_attributes.cpp  tile_attributes.hpp  tile_attributes.ipp  tile_set.cpp  tile_set.hpp  tutorial_messages.cpp  tutorial_messages.hpp  unit_conversions.cpp  unit_conversions.hpp
src/engine/: base_components.hpp  collision_checker.cpp  collision_checker.hpp  debugging_system.cpp  debugging_system.hpp  earth_quake_effect.cpp  earth_quake_effect.hpp  entity_activation_system.cpp  entity_activation_system.hpp  entity_tools.hpp  graphical_effects.cpp  graphical_effects.hpp  imf_player.cpp  imf_player.hpp  isprite_factory.hpp  life_time_components.hpp  life_time_system.cpp  life_time_system.hpp  map_renderer.cpp  map_renderer.hpp  motion_smoothing.hpp  movement.cpp  movement.hpp  opengl.cpp  opengl.hpp  particle_system.cpp  particle_system.hpp  physical_components.hpp  physics.cpp  physics.hpp  physics_system.cpp  physics_system.hpp  random_number_generator.cpp  random_number_generator.hpp  renderer.cpp  renderer.hpp  rendering_system.cpp  rendering_system.hpp  shader.cpp  shader.hpp  (+17 more)
src/frontend/: anti_piracy_screen_mode.cpp  anti_piracy_screen_mode.hpp  command_line_options.hpp  demo_player.cpp  demo_player.hpp  game.cpp  game.hpp  game_mode.cpp  game_mode.hpp  game_runner.cpp  game_runner.hpp  game_service_provider.hpp  game_session_mode.cpp  game_session_mode.hpp  input_handler.cpp  input_handler.hpp  intro_demo_loop_mode.cpp  intro_demo_loop_mode.hpp  json_utils.hpp  menu_mode.cpp  menu_mode.hpp  user_profile.cpp  user_profile.hpp
src/game_logic/: README.md  actor_tag.hpp  behavior_controller.hpp  behavior_controller_system.cpp  behavior_controller_system.hpp  camera.cpp  camera.hpp  collectable_components.hpp  compatibility_mode.cpp  compatibility_mode.hpp  damage_components.hpp  damage_infliction_system.cpp  damage_infliction_system.hpp  debugging_system.cpp  debugging_system.hpp  demo_player.cpp  demo_player.hpp  destruction_effect_specs.ipp  dynamic_geometry_components.hpp  dynamic_geometry_system.cpp  dynamic_geometry_system.hpp  earth_quake_effect.cpp  earth_quake_effect.hpp  effect_actor_components.cpp  effect_actor_components.hpp  effect_components.hpp  effects_system.cpp  effects_system.hpp  enemy_radar.cpp  enemy_radar.hpp  entity_configuration.ipp  entity_factory.cpp  entity_factory.hpp  game_world.cpp  game_world.hpp  global_dependencies.hpp  ientity_factory.hpp  ingame_systems.cpp  ingame_systems.hpp  input.hpp  (+18 more)
src/game_logic_classic/: actors.c  actors.h  common.h  defs.h  game.h  game1.c  game2.c  game3.c  game_world_classic.cpp  game_world_classic.hpp  gamedefs.h  lvlhead.h  memory.c  misc.c  particls.c  player.c  sounds.h  sprite.c  types.h  vars.c  vars.h
src/game_logic_common/: igame_world.hpp  input.hpp  utils.hpp
src/loader/: actor_image_package.cpp  actor_image_package.hpp  adlib_emulator.hpp  audio_package.cpp  audio_package.hpp  bitwise_iter.hpp  byte_buffer.hpp  cmp_file_package.cpp  cmp_file_package.hpp  file_utils.cpp  (+24 more)
test/: CMakeLists.txt  test_array_view.cpp  test_duke_script_loader.cpp  test_elevator.cpp  test_high_score_list.cpp  test_json_utils.cpp  test_letter_collection.cpp  test_main.cpp  test_mod_library.cpp  test_physics_system.cpp  test_player.cpp  test_player_animation_system.cpp  test_player_attack_system.cpp  test_player_state_machine.cpp  test_rng.cpp  test_spike_ball.cpp  test_string_utils.cpp  test_timing.cpp  utils.hpp
(+275 files in other folders)
