set(core_sources
    base/array_view.hpp
    base/grid.hpp
    base/math_tools.hpp
    base/spatial_types.hpp
    base/warnings.hpp
    data/audio_buffer.hpp
    data/bonus.hpp
    data/duke_script.hpp
    data/game_session_data.hpp
    data/game_traits.cpp
    data/game_traits.hpp
    data/image.cpp
    data/image.hpp
    data/level_hints.cpp
    data/level_hints.hpp
    data/map.cpp
    data/map.hpp
    data/player_model.cpp
    data/player_model.hpp
    data/song.hpp
    data/sound_ids.hpp
    data/strings.hpp
    data/tile_attributes.cpp
    data/tile_attributes.hpp
    data/tutorial_messages.cpp
    data/tutorial_messages.hpp
    data/unit_conversions.cpp
    data/unit_conversions.hpp
    engine/base_components.hpp
    engine/collision_checker.cpp
    engine/collision_checker.hpp
    engine/debugging_system.cpp
    engine/debugging_system.hpp
    engine/earth_quake_effect.cpp
    engine/earth_quake_effect.hpp
    engine/entity_activation_system.cpp
    engine/entity_activation_system.hpp
    engine/entity_tools.hpp
    engine/imf_player.cpp
    engine/imf_player.hpp
    engine/life_time_components.hpp
    engine/life_time_system.cpp
    engine/life_time_system.hpp
    engine/map_renderer.cpp
    engine/map_renderer.hpp
    engine/movement.cpp
    engine/movement.hpp
    engine/opengl.cpp
    engine/opengl.hpp
    engine/particle_system.cpp
    engine/particle_system.hpp
    engine/physical_components.hpp
    engine/physics_system.cpp
    engine/physics_system.hpp
    engine/random_number_generator.cpp
    engine/random_number_generator.hpp
    engine/renderer.cpp
    engine/renderer.hpp
    engine/rendering_system.cpp
    engine/rendering_system.hpp
    engine/shader.cpp
    engine/shader.hpp
    engine/sound_system.cpp
    engine/sound_system.hpp
    engine/sprite_tools.hpp
    engine/texture.cpp
    engine/texture.hpp
    engine/tile_renderer.cpp
    engine/tile_renderer.hpp
    engine/timing.hpp
    engine/visual_components.hpp
    game_logic/ai/blue_guard.cpp
    game_logic/ai/blue_guard.hpp
    game_logic/ai/bomber_plane.cpp
    game_logic/ai/bomber_plane.hpp
    game_logic/ai/ceiling_sucker.cpp
    game_logic/ai/ceiling_sucker.hpp
    game_logic/ai/eyeball_thrower.cpp
    game_logic/ai/eyeball_thrower.hpp
    game_logic/ai/hover_bot.cpp
    game_logic/ai/hover_bot.hpp
    game_logic/ai/laser_turret.cpp
    game_logic/ai/laser_turret.hpp
    game_logic/ai/messenger_drone.cpp
    game_logic/ai/messenger_drone.hpp
    game_logic/ai/missile.cpp
    game_logic/ai/missile.hpp
    game_logic/ai/prisoner.cpp
    game_logic/ai/prisoner.hpp
    game_logic/ai/red_bird.cpp
    game_logic/ai/red_bird.hpp
    game_logic/ai/rigelatin_soldier.cpp
    game_logic/ai/rigelatin_soldier.hpp
    game_logic/ai/rocket_turret.cpp
    game_logic/ai/rocket_turret.hpp
    game_logic/ai/security_camera.cpp
    game_logic/ai/security_camera.hpp
    game_logic/ai/simple_walker.cpp
    game_logic/ai/simple_walker.hpp
    game_logic/ai/sliding_door.cpp
    game_logic/ai/sliding_door.hpp
    game_logic/ai/slime_blob.cpp
    game_logic/ai/slime_blob.hpp
    game_logic/ai/slime_pipe.cpp
    game_logic/ai/slime_pipe.hpp
    game_logic/ai/smash_hammer.cpp
    game_logic/ai/smash_hammer.hpp
    game_logic/ai/snake.cpp
    game_logic/ai/snake.hpp
    game_logic/ai/spider.cpp
    game_logic/ai/spider.hpp
    game_logic/ai/spike_ball.cpp
    game_logic/ai/spike_ball.hpp
    game_logic/ai/super_force_field.cpp
    game_logic/ai/super_force_field.hpp
    game_logic/ai/watch_bot.cpp
    game_logic/ai/watch_bot.hpp
    game_logic/behavior_controller.hpp
    game_logic/behavior_controller_system.cpp
    game_logic/behavior_controller_system.hpp
    game_logic/collectable_components.hpp
    game_logic/damage_components.hpp
    game_logic/damage_infliction_system.cpp
    game_logic/damage_infliction_system.hpp
    game_logic/dynamic_geometry_components.hpp
    game_logic/dynamic_geometry_system.cpp
    game_logic/dynamic_geometry_system.hpp
    game_logic/effect_actor_components.cpp
    game_logic/effect_actor_components.hpp
    game_logic/effects_system.cpp
    game_logic/effects_system.hpp
    game_logic/enemy_radar.cpp
    game_logic/enemy_radar.hpp
    game_logic/entity_configuration.ipp
    game_logic/entity_factory.cpp
    game_logic/entity_factory.hpp
    game_logic/ientity_factory.hpp
    game_logic/ingame_systems.cpp
    game_logic/ingame_systems.hpp
    game_logic/input.hpp
    game_logic/interaction/locked_door.cpp
    game_logic/interaction/locked_door.hpp
    game_logic/interaction/elevator.cpp
    game_logic/interaction/elevator.hpp
    game_logic/interaction/force_field.cpp
    game_logic/interaction/force_field.hpp
    game_logic/interaction/respawn_checkpoint.cpp
    game_logic/interaction/respawn_checkpoint.hpp
    game_logic/item_container.cpp
    game_logic/item_container.hpp
    game_logic/map_scroll_system.cpp
    game_logic/map_scroll_system.hpp
    game_logic/player.cpp
    game_logic/player.hpp
    game_logic/player/components.hpp
    game_logic/player/damage_system.cpp
    game_logic/player/damage_system.hpp
    game_logic/player/projectile_system.cpp
    game_logic/player/projectile_system.hpp
    game_logic/player_interaction_system.cpp
    game_logic/player_interaction_system.hpp
    game_logic/trigger_components.hpp
    loader/actor_image_package.cpp
    loader/actor_image_package.hpp
    loader/adlib_emulator.hpp
    loader/audio_package.cpp
    loader/audio_package.hpp
    loader/bitwise_iter.hpp
    loader/byte_buffer.hpp
    loader/cmp_file_package.cpp
    loader/cmp_file_package.hpp
    loader/duke_script_loader.cpp
    loader/duke_script_loader.hpp
    loader/ega_image_decoder.cpp
    loader/ega_image_decoder.hpp
    loader/file_utils.cpp
    loader/file_utils.hpp
    loader/level_loader.cpp
    loader/level_loader.hpp
    loader/movie_loader.cpp
    loader/movie_loader.hpp
    loader/music_loader.cpp
    loader/music_loader.hpp
    loader/palette.cpp
    loader/palette.hpp
    loader/png_image.cpp
    loader/png_image.hpp
    loader/resource_loader.cpp
    loader/resource_loader.hpp
    loader/rle_compression.hpp
    loader/voc_decoder.cpp
    loader/voc_decoder.hpp
    sdl_utils/error.cpp
    sdl_utils/error.hpp
    sdl_utils/ptr.hpp
    ui/apogee_logo.cpp
    ui/apogee_logo.hpp
    ui/bonus_screen.cpp
    ui/bonus_screen.hpp
    ui/duke_script_runner.cpp
    ui/duke_script_runner.hpp
    ui/fps_display.cpp
    ui/fps_display.hpp
    ui/hud_renderer.cpp
    ui/hud_renderer.hpp
    ui/ingame_message_display.cpp
    ui/ingame_message_display.hpp
    ui/intro_movie.cpp
    ui/intro_movie.hpp
    ui/menu_element_renderer.cpp
    ui/menu_element_renderer.hpp
    ui/movie_player.cpp
    ui/movie_player.hpp
    ui/utils.cpp
    ui/utils.hpp
    utils/container_tools.hpp
    utils/enum_hash.hpp
)


set(3rd_party_path ${CMAKE_SOURCE_DIR}/3rd_party)


# Core library
add_library(rigel_core STATIC ${core_sources})
target_include_directories(rigel_core
    PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${SDL2_INCLUDE_DIR}"
    ${SDL2_MIXER_INCLUDE_DIRS}
    ${3rd_party_path}/entityx

    ${3rd_party_path}/glad/include
    ${3rd_party_path}/glm

    PRIVATE
    ${3rd_party_path}/dbopl
    ${3rd_party_path}/speex_resampler
)
target_link_libraries(rigel_core
    PUBLIC
    "${SDL2_LIBRARY}"
    ${SDL2_MIXER_LIBRARIES}
    entityx
    Boost::boost

    PRIVATE
    dbopl
    speex_resampler
    glad
)

if(USE_GL_ES)
    target_compile_definitions(rigel_core PUBLIC
        RIGEL_USE_GL_ES=1
    )
endif()



# Main executable
set(main_exe_sources
    game_main.cpp
    game_main.hpp
    game_main.ipp
    game_mode.hpp
    game_service_provider.hpp
    game_session_mode.cpp
    game_session_mode.hpp
    game_runner.cpp
    game_runner.hpp
    global_level_events.hpp
    intro_demo_loop_mode.cpp
    intro_demo_loop_mode.hpp
    main.cpp
    menu_mode.cpp
    menu_mode.hpp
    mode_stage.hpp
)


add_executable(${main_exe_name} ${main_exe_sources})
target_link_libraries(${main_exe_name} PRIVATE
    ${SDLMAIN2_LIBRARY}
    rigel_core
    Boost::boost
    Boost::program_options
    Boost::disable_autolinking
    Boost::dynamic_linking
)

